--- a/Codes/logistic_regression.ipynb
+++ b/Codes/logistic_regression.ipynb
@@ -22,11 +22,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 29,
       "metadata": {},
       "outputs": [],
       "source": [
-        "import pandas as pd"
+        "import pandas as pd\n",
+        "import numpy as np"
       ]
     },
     {
@@ -41,16 +42,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 30,
       "metadata": {},
       "outputs": [],
       "source": [
-        "dataset = pd.read_csv('../Dataset/breast_cancer.csv')"
+        "dataset = pd.read_csv('../Dataset/breast_cancer_wisconsin.csv')"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 31,
       "metadata": {},
       "outputs": [
         {
@@ -60,23 +61,43 @@
             "Dataset Information\n",
             "__________________________\n",
             "<class 'pandas.core.frame.DataFrame'>\n",
-            "RangeIndex: 683 entries, 0 to 682\n",
-            "Data columns (total 11 columns):\n",
-            " #   Column                       Non-Null Count  Dtype\n",
-            "---  ------                       --------------  -----\n",
-            " 0   Sample code number           683 non-null    int64\n",
-            " 1   Clump Thickness              683 non-null    int64\n",
-            " 2   Uniformity of Cell Size      683 non-null    int64\n",
-            " 3   Uniformity of Cell Shape     683 non-null    int64\n",
-            " 4   Marginal Adhesion            683 non-null    int64\n",
-            " 5   Single Epithelial Cell Size  683 non-null    int64\n",
-            " 6   Bare Nuclei                  683 non-null    int64\n",
-            " 7   Bland Chromatin              683 non-null    int64\n",
-            " 8   Normal Nucleoli              683 non-null    int64\n",
-            " 9   Mitoses                      683 non-null    int64\n",
-            " 10  Class                        683 non-null    int64\n",
-            "dtypes: int64(11)\n",
-            "memory usage: 58.8 KB\n",
+            "RangeIndex: 699 entries, 0 to 698\n",
+            "Data columns (total 10 columns):\n",
+            " #   Column                       Non-Null Count  Dtype  \n",
+            "---  ------                       --------------  -----  \n",
+            " 0   Clump_thickness              699 non-null    int64  \n",
+            " 1   Uniformity_of_cell_size      699 non-null    int64  \n",
+            " 2   Uniformity_of_cell_shape     699 non-null    int64  \n",
+            " 3   Marginal_adhesion            699 non-null    int64  \n",
+            " 4   Single_epithelial_cell_size  699 non-null    int64  \n",
+            " 5   Bare_nuclei                  683 non-null    float64\n",
+            " 6   Bland_chromatin              699 non-null    int64  \n",
+            " 7   Normal_nucleoli              699 non-null    int64  \n",
+            " 8   Mitoses                      699 non-null    int64  \n",
+            " 9   Class                        699 non-null    int64  \n",
+            "dtypes: float64(1), int64(9)\n",
+            "memory usage: 54.7 KB\n",
+            "None\n",
+            "Dataset raw data\n",
+            "\n",
+            "___________________________\n",
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 699 entries, 0 to 698\n",
+            "Data columns (total 10 columns):\n",
+            " #   Column                       Non-Null Count  Dtype  \n",
+            "---  ------                       --------------  -----  \n",
+            " 0   Clump_thickness              699 non-null    int64  \n",
+            " 1   Uniformity_of_cell_size      699 non-null    int64  \n",
+            " 2   Uniformity_of_cell_shape     699 non-null    int64  \n",
+            " 3   Marginal_adhesion            699 non-null    int64  \n",
+            " 4   Single_epithelial_cell_size  699 non-null    int64  \n",
+            " 5   Bare_nuclei                  683 non-null    float64\n",
+            " 6   Bland_chromatin              699 non-null    int64  \n",
+            " 7   Normal_nucleoli              699 non-null    int64  \n",
+            " 8   Mitoses                      699 non-null    int64  \n",
+            " 9   Class                        699 non-null    int64  \n",
+            "dtypes: float64(1), int64(9)\n",
+            "memory usage: 54.7 KB\n",
             "None\n"
           ]
         }
@@ -84,7 +105,11 @@
       "source": [
         "print(\"Dataset Information\");\n",
         "print(\"__________________________\")\n",
-        "print(dataset.info());"
+        "print(dataset.info());\n",
+        "\n",
+        "print(\"Dataset raw data\\n\");\n",
+        "print(\"___________________________\")\n",
+        "print(dataset_raw.info());"
       ]
     },
     {
@@ -103,20 +128,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 32,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "[[ 5  1  1 ...  3  1  1]\n",
-            " [ 5  4  4 ...  3  2  1]\n",
-            " [ 3  1  1 ...  3  1  1]\n",
+            "[[ 1.  1.  1. ...  3.  1.  1.]\n",
+            " [ 4.  4.  5. ...  3.  2.  1.]\n",
+            " [ 1.  1.  1. ...  3.  1.  1.]\n",
             " ...\n",
-            " [ 5 10 10 ...  8 10  2]\n",
-            " [ 4  8  6 ... 10  6  1]\n",
-            " [ 4  8  8 ... 10  4  1]]\n"
+            " [10. 10.  3. ...  8. 10.  2.]\n",
+            " [ 8.  6.  4. ... 10.  6.  1.]\n",
+            " [ 8.  8.  5. ... 10.  4.  1.]]\n"
           ]
         }
       ],
@@ -127,32 +152,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 33,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "[2 2 2 2 2 4 2 2 2 2 2 2 4 2 4 4 2 2 4 2 4 4 2 2 4 2 2 2 2 2 2 4 2 2 2 4 2\n",
-            " 4 4 4 4 4 4 2 4 2 2 4 4 4 4 4 4 4 4 4 4 4 4 2 4 4 2 4 2 4 4 2 2 4 2 4 4 2\n",
-            " 2 2 2 2 2 2 2 2 4 4 4 4 2 2 2 2 2 2 2 2 2 2 4 4 4 4 2 4 4 4 4 4 2 4 2 4 4\n",
-            " 4 2 2 2 4 2 2 2 2 4 4 4 2 4 2 4 2 2 2 4 2 2 2 2 2 2 2 2 4 2 2 4 2 2 4 2 4\n",
-            " 4 2 2 4 2 2 4 4 2 2 2 2 4 4 2 2 2 2 2 4 4 4 2 4 2 4 2 2 2 4 4 2 4 4 4 2 4\n",
-            " 4 2 2 2 2 2 2 2 2 4 4 2 2 2 4 4 2 2 2 4 4 2 4 4 4 2 2 4 2 2 4 4 4 4 2 4 4\n",
-            " 2 4 4 4 2 4 2 4 4 4 4 2 2 2 2 2 2 4 4 2 2 4 2 4 4 4 2 2 2 2 4 4 4 4 4 2 4\n",
-            " 4 4 2 4 2 4 4 2 2 2 2 4 2 2 4 4 4 4 4 2 4 4 2 2 4 4 2 2 4 4 2 4 2 4 4 2 2\n",
-            " 4 2 2 2 4 2 2 4 4 2 2 4 2 4 2 2 4 2 4 4 4 2 2 4 4 2 4 2 2 4 4 2 2 2 4 2 2\n",
-            " 2 4 4 2 2 2 4 2 2 4 4 4 4 4 4 2 2 2 2 4 4 2 2 2 2 2 2 2 2 2 2 2 2 2 4 2 2\n",
-            " 2 2 4 2 2 2 2 4 2 2 2 2 2 2 2 2 4 2 2 2 2 2 2 2 2 2 2 4 2 4 2 4 2 2 2 2 4\n",
-            " 2 2 2 4 2 4 2 2 2 2 2 2 2 4 4 2 2 2 4 2 2 2 2 2 2 2 2 4 2 2 2 4 2 4 4 4 2\n",
-            " 2 2 2 2 2 2 4 4 4 2 2 2 2 2 2 2 2 2 2 2 4 2 2 4 4 2 2 2 4 4 4 2 4 2 4 2 2\n",
-            " 2 2 2 2 2 2 2 2 2 2 4 2 2 2 2 2 2 2 4 4 2 2 2 4 2 2 4 4 2 2 2 2 2 2 4 2 2\n",
-            " 2 2 2 2 2 2 2 2 2 2 2 2 2 4 2 2 4 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 4 2 2 4 4\n",
-            " 4 4 2 2 4 2 2 2 2 2 2 4 4 2 2 2 4 2 4 2 4 4 4 2 4 2 2 2 2 2 2 2 2 4 4 4 2\n",
-            " 2 4 2 4 4 4 2 2 2 2 2 2 2 2 2 2 2 2 4 2 2 2 2 2 2 4 2 2 4 2 2 2 2 2 2 2 2\n",
-            " 2 2 2 4 2 2 2 2 2 2 2 2 2 4 2 2 2 2 2 2 2 2 2 4 4 4 2 2 2 2 2 2 2 2 2 4 4\n",
-            " 2 2 2 2 2 2 2 2 2 4 2 2 2 2 4 4 4]\n"
+            "[2 2 2 2 2 4 2 2 2 2 2 2 4 2 4 4 2 2 4 2 4 4 2 4 2 4 2 2 2 2 2 2 4 2 2 2 4\n",
+            " 2 4 4 2 4 4 4 4 2 4 2 2 4 4 4 4 4 4 4 4 4 4 4 4 2 4 4 2 4 2 4 4 2 2 4 2 4\n",
+            " 4 2 2 2 2 2 2 2 2 2 4 4 4 4 2 2 2 2 2 2 2 2 2 2 4 4 4 4 2 4 4 4 4 4 2 4 2\n",
+            " 4 4 4 2 2 2 4 2 2 2 2 4 4 4 2 4 2 4 2 2 2 4 2 2 2 2 2 2 2 2 2 4 2 2 2 4 2\n",
+            " 2 4 2 4 4 2 2 4 2 2 2 4 4 2 2 2 2 2 4 4 2 2 2 2 2 4 4 4 2 4 2 4 2 2 2 4 4\n",
+            " 2 4 4 4 2 4 4 2 2 2 2 2 2 2 2 4 4 2 2 2 4 4 2 2 2 4 4 2 4 4 4 2 2 4 2 2 4\n",
+            " 4 4 4 2 4 4 2 4 4 4 2 4 2 2 4 4 4 4 2 2 2 2 2 2 4 4 2 2 2 4 2 4 4 4 2 2 2\n",
+            " 2 4 4 4 4 4 2 4 4 4 2 4 2 4 4 2 2 2 2 2 4 2 2 4 4 4 4 4 2 4 4 2 2 4 4 2 4\n",
+            " 2 2 2 4 4 2 4 2 4 4 2 2 4 2 2 2 4 2 2 2 4 4 2 2 4 2 2 4 2 2 4 2 4 4 4 2 2\n",
+            " 4 4 2 4 2 2 4 4 2 2 2 4 2 2 2 4 4 2 2 2 4 2 2 4 4 4 4 4 4 2 2 2 2 4 4 2 2\n",
+            " 2 2 2 2 2 2 2 2 2 2 2 4 2 2 2 2 4 2 2 2 2 4 2 2 2 2 2 2 2 2 4 2 2 2 2 2 2\n",
+            " 2 2 2 2 2 4 2 4 2 4 2 2 2 2 4 2 2 2 4 2 4 2 2 2 2 2 2 2 4 4 2 2 2 4 2 2 2\n",
+            " 2 2 2 2 2 4 2 2 2 4 2 4 4 4 2 2 2 2 2 2 2 4 4 4 2 2 2 2 2 2 2 2 2 2 2 4 2\n",
+            " 2 4 4 2 2 2 4 4 4 2 4 2 4 2 2 2 2 2 2 2 2 2 2 2 2 4 2 2 2 2 2 2 2 4 4 2 2\n",
+            " 2 4 2 2 4 4 2 2 2 2 2 2 4 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 4 2 2 4 2 2 2 2 2\n",
+            " 2 2 2 2 2 2 2 2 2 2 4 2 2 4 4 4 4 2 2 4 2 2 2 2 2 2 4 4 2 2 2 4 2 4 2 4 4\n",
+            " 4 2 4 2 2 2 2 2 2 2 2 4 4 4 2 2 4 2 4 4 4 2 2 2 2 2 2 2 2 2 2 2 2 2 4 2 2\n",
+            " 2 2 2 2 4 2 2 4 2 2 2 2 2 2 2 2 2 2 2 4 2 2 2 2 2 2 2 2 2 4 2 2 2 2 2 2 2\n",
+            " 2 2 4 4 4 2 2 2 2 2 2 2 2 2 4 4 2 2 2 2 2 2 2 2 2 4 2 2 2 2 4 4 4]\n"
           ]
         }
       ],
@@ -173,15 +198,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 38,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "DataSet Splitting:\n",
+            "\n",
+            "_______________________________\n",
+            "X_train:  4472\n",
+            "X_test:  1120\n",
+            "y_train: 559\n",
+            "y_test 140\n"
+          ]
+        }
+      ],
       "source": [
         "from sklearn.model_selection import train_test_split;\n",
         "\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=0);\n",
         "\n",
-        "# print(\"X_train:\\n\", np.size(X_train));"
+        "print(\"DataSet Splitting:\\n\");\n",
+        "print(\"_______________________________\")\n",
+        "print(\"X_train: \", np.size(X_train));\n",
+        "print(\"X_test: \", np.size(X_test));\n",
+        "print(\"y_train:\", np.size(y_train));\n",
+        "print(\"y_test\", np.size(y_test));\n"
       ]
     },
     {
