finish_training_and_k_fold_validation

--- a/Codes/logistic_regression.ipynb
+++ b/Codes/logistic_regression.ipynb
@@ -22,12 +22,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 38,
       "metadata": {},
       "outputs": [],
       "source": [
         "import pandas as pd\n",
-        "import numpy as np"
+        "import numpy as np\n",
+        "from pprint import pprint"
       ]
     },
     {
@@ -42,7 +43,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 39,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -51,7 +52,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 40,
       "metadata": {},
       "outputs": [
         {
@@ -78,38 +79,85 @@
             "dtypes: float64(1), int64(9)\n",
             "memory usage: 54.7 KB\n",
             "None\n",
-            "Dataset raw data\n",
             "\n",
-            "___________________________\n",
-            "<class 'pandas.core.frame.DataFrame'>\n",
-            "RangeIndex: 699 entries, 0 to 698\n",
-            "Data columns (total 10 columns):\n",
-            " #   Column                       Non-Null Count  Dtype  \n",
-            "---  ------                       --------------  -----  \n",
-            " 0   Clump_thickness              699 non-null    int64  \n",
-            " 1   Uniformity_of_cell_size      699 non-null    int64  \n",
-            " 2   Uniformity_of_cell_shape     699 non-null    int64  \n",
-            " 3   Marginal_adhesion            699 non-null    int64  \n",
-            " 4   Single_epithelial_cell_size  699 non-null    int64  \n",
-            " 5   Bare_nuclei                  683 non-null    float64\n",
-            " 6   Bland_chromatin              699 non-null    int64  \n",
-            " 7   Normal_nucleoli              699 non-null    int64  \n",
-            " 8   Mitoses                      699 non-null    int64  \n",
-            " 9   Class                        699 non-null    int64  \n",
-            "dtypes: float64(1), int64(9)\n",
-            "memory usage: 54.7 KB\n",
-            "None\n"
+            "\n",
+            "Number of null data:\n",
+            "\n",
+            "__________________________\n",
+            "Clump_thickness                 0\n",
+            "Uniformity_of_cell_size         0\n",
+            "Uniformity_of_cell_shape        0\n",
+            "Marginal_adhesion               0\n",
+            "Single_epithelial_cell_size     0\n",
+            "Bare_nuclei                    16\n",
+            "Bland_chromatin                 0\n",
+            "Normal_nucleoli                 0\n",
+            "Mitoses                         0\n",
+            "Class                           0\n",
+            "dtype: int64\n"
           ]
         }
       ],
       "source": [
         "print(\"Dataset Information\");\n",
         "print(\"__________________________\")\n",
-        "print(dataset.info());\n",
+        "pprint(dataset.info());\n",
+        "print(\"\\n\")\n",
+        "print(\"Number of null data:\\n\")\n",
+        "print(\"__________________________\")\n",
+        "pprint(pd.isnull(dataset).sum())"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Proccess null value:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 47,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Number of null data:\n",
+            "\n",
+            "__________________________\n",
+            "Clump_thickness                0\n",
+            "Uniformity_of_cell_size        0\n",
+            "Uniformity_of_cell_shape       0\n",
+            "Marginal_adhesion              0\n",
+            "Single_epithelial_cell_size    0\n",
+            "Bare_nuclei                    0\n",
+            "Bland_chromatin                0\n",
+            "Normal_nucleoli                0\n",
+            "Mitoses                        0\n",
+            "Class                          0\n",
+            "dtype: int64\n"
+          ]
+        }
+      ],
+      "source": [
+        "threshold = 0.05;\n",
         "\n",
-        "print(\"Dataset raw data\\n\");\n",
-        "print(\"___________________________\")\n",
-        "print(dataset_raw.info());"
+        "if dataset.isna().sum().sum() / dataset.size < threshold:\n",
+        "    dataset = dataset.dropna()\n",
+        "else:\n",
+        "    for col in dataset.columns:\n",
+        "        if dataset[col].dtype in ['float64', 'int64']:\n",
+        "            # Điền NaN bằng mean cho dữ liệu số\n",
+        "            dataset[col] = dataset[col].fillna(dataset[col].mean())\n",
+        "        else:\n",
+        "            # Điền NaN bằng giá trị phổ biến nhất cho dữ liệu dạng object/categorical\n",
+        "            dataset[col] = dataset[col].fillna(dataset[col].mode()[0])\n",
+        "\n",
+        "print(\"Number of null data:\\n\")\n",
+        "print(\"__________________________\")\n",
+        "pprint(pd.isnull(dataset).sum())"
       ]
     },
     {
@@ -128,62 +176,75 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 46,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "[[ 1.  1.  1. ...  3.  1.  1.]\n",
-            " [ 4.  4.  5. ...  3.  2.  1.]\n",
-            " [ 1.  1.  1. ...  3.  1.  1.]\n",
-            " ...\n",
-            " [10. 10.  3. ...  8. 10.  2.]\n",
-            " [ 8.  6.  4. ... 10.  6.  1.]\n",
-            " [ 8.  8.  5. ... 10.  4.  1.]]\n"
+            "array([[ 1.,  1.,  1., ...,  3.,  1.,  1.],\n",
+            "       [ 4.,  4.,  5., ...,  3.,  2.,  1.],\n",
+            "       [ 1.,  1.,  1., ...,  3.,  1.,  1.],\n",
+            "       ...,\n",
+            "       [10., 10.,  3., ...,  8., 10.,  2.],\n",
+            "       [ 8.,  6.,  4., ..., 10.,  6.,  1.],\n",
+            "       [ 8.,  8.,  5., ..., 10.,  4.,  1.]])\n"
           ]
         }
       ],
       "source": [
         "X = dataset.iloc[:,1:-1].values;\n",
-        "print(X)\n"
+        "pprint(X)\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 45,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "[2 2 2 2 2 4 2 2 2 2 2 2 4 2 4 4 2 2 4 2 4 4 2 4 2 4 2 2 2 2 2 2 4 2 2 2 4\n",
-            " 2 4 4 2 4 4 4 4 2 4 2 2 4 4 4 4 4 4 4 4 4 4 4 4 2 4 4 2 4 2 4 4 2 2 4 2 4\n",
-            " 4 2 2 2 2 2 2 2 2 2 4 4 4 4 2 2 2 2 2 2 2 2 2 2 4 4 4 4 2 4 4 4 4 4 2 4 2\n",
-            " 4 4 4 2 2 2 4 2 2 2 2 4 4 4 2 4 2 4 2 2 2 4 2 2 2 2 2 2 2 2 2 4 2 2 2 4 2\n",
-            " 2 4 2 4 4 2 2 4 2 2 2 4 4 2 2 2 2 2 4 4 2 2 2 2 2 4 4 4 2 4 2 4 2 2 2 4 4\n",
-            " 2 4 4 4 2 4 4 2 2 2 2 2 2 2 2 4 4 2 2 2 4 4 2 2 2 4 4 2 4 4 4 2 2 4 2 2 4\n",
-            " 4 4 4 2 4 4 2 4 4 4 2 4 2 2 4 4 4 4 2 2 2 2 2 2 4 4 2 2 2 4 2 4 4 4 2 2 2\n",
-            " 2 4 4 4 4 4 2 4 4 4 2 4 2 4 4 2 2 2 2 2 4 2 2 4 4 4 4 4 2 4 4 2 2 4 4 2 4\n",
-            " 2 2 2 4 4 2 4 2 4 4 2 2 4 2 2 2 4 2 2 2 4 4 2 2 4 2 2 4 2 2 4 2 4 4 4 2 2\n",
-            " 4 4 2 4 2 2 4 4 2 2 2 4 2 2 2 4 4 2 2 2 4 2 2 4 4 4 4 4 4 2 2 2 2 4 4 2 2\n",
-            " 2 2 2 2 2 2 2 2 2 2 2 4 2 2 2 2 4 2 2 2 2 4 2 2 2 2 2 2 2 2 4 2 2 2 2 2 2\n",
-            " 2 2 2 2 2 4 2 4 2 4 2 2 2 2 4 2 2 2 4 2 4 2 2 2 2 2 2 2 4 4 2 2 2 4 2 2 2\n",
-            " 2 2 2 2 2 4 2 2 2 4 2 4 4 4 2 2 2 2 2 2 2 4 4 4 2 2 2 2 2 2 2 2 2 2 2 4 2\n",
-            " 2 4 4 2 2 2 4 4 4 2 4 2 4 2 2 2 2 2 2 2 2 2 2 2 2 4 2 2 2 2 2 2 2 4 4 2 2\n",
-            " 2 4 2 2 4 4 2 2 2 2 2 2 4 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 4 2 2 4 2 2 2 2 2\n",
-            " 2 2 2 2 2 2 2 2 2 2 4 2 2 4 4 4 4 2 2 4 2 2 2 2 2 2 4 4 2 2 2 4 2 4 2 4 4\n",
-            " 4 2 4 2 2 2 2 2 2 2 2 4 4 4 2 2 4 2 4 4 4 2 2 2 2 2 2 2 2 2 2 2 2 2 4 2 2\n",
-            " 2 2 2 2 4 2 2 4 2 2 2 2 2 2 2 2 2 2 2 4 2 2 2 2 2 2 2 2 2 4 2 2 2 2 2 2 2\n",
-            " 2 2 4 4 4 2 2 2 2 2 2 2 2 2 4 4 2 2 2 2 2 2 2 2 2 4 2 2 2 2 4 4 4]\n"
+            "array([2, 2, 2, 2, 2, 4, 2, 2, 2, 2, 2, 2, 4, 2, 4, 4, 2, 2, 4, 2, 4, 4,\n",
+            "       2, 4, 2, 4, 2, 2, 2, 2, 2, 2, 4, 2, 2, 2, 4, 2, 4, 4, 2, 4, 4, 4,\n",
+            "       4, 2, 4, 2, 2, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 2, 4, 4, 2, 4,\n",
+            "       2, 4, 4, 2, 2, 4, 2, 4, 4, 2, 2, 2, 2, 2, 2, 2, 2, 2, 4, 4, 4, 4,\n",
+            "       2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 4, 4, 4, 4, 2, 4, 4, 4, 4, 4, 2, 4,\n",
+            "       2, 4, 4, 4, 2, 2, 2, 4, 2, 2, 2, 2, 4, 4, 4, 2, 4, 2, 4, 2, 2, 2,\n",
+            "       4, 2, 2, 2, 2, 2, 2, 2, 2, 2, 4, 2, 2, 2, 4, 2, 2, 4, 2, 4, 4, 2,\n",
+            "       2, 4, 2, 2, 2, 4, 4, 2, 2, 2, 2, 2, 4, 4, 2, 2, 2, 2, 2, 4, 4, 4,\n",
+            "       2, 4, 2, 4, 2, 2, 2, 4, 4, 2, 4, 4, 4, 2, 4, 4, 2, 2, 2, 2, 2, 2,\n",
+            "       2, 2, 4, 4, 2, 2, 2, 4, 4, 2, 2, 2, 4, 4, 2, 4, 4, 4, 2, 2, 4, 2,\n",
+            "       2, 4, 4, 4, 4, 2, 4, 4, 2, 4, 4, 4, 2, 4, 2, 2, 4, 4, 4, 4, 2, 2,\n",
+            "       2, 2, 2, 2, 4, 4, 2, 2, 2, 4, 2, 4, 4, 4, 2, 2, 2, 2, 4, 4, 4, 4,\n",
+            "       4, 2, 4, 4, 4, 2, 4, 2, 4, 4, 2, 2, 2, 2, 2, 4, 2, 2, 4, 4, 4, 4,\n",
+            "       4, 2, 4, 4, 2, 2, 4, 4, 2, 4, 2, 2, 2, 4, 4, 2, 4, 2, 4, 4, 2, 2,\n",
+            "       4, 2, 2, 2, 4, 2, 2, 2, 4, 4, 2, 2, 4, 2, 2, 4, 2, 2, 4, 2, 4, 4,\n",
+            "       4, 2, 2, 4, 4, 2, 4, 2, 2, 4, 4, 2, 2, 2, 4, 2, 2, 2, 4, 4, 2, 2,\n",
+            "       2, 4, 2, 2, 4, 4, 4, 4, 4, 4, 2, 2, 2, 2, 4, 4, 2, 2, 2, 2, 2, 2,\n",
+            "       2, 2, 2, 2, 2, 2, 2, 4, 2, 2, 2, 2, 4, 2, 2, 2, 2, 4, 2, 2, 2, 2,\n",
+            "       2, 2, 2, 2, 4, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 4, 2, 4, 2, 4, 2,\n",
+            "       2, 2, 2, 4, 2, 2, 2, 4, 2, 4, 2, 2, 2, 2, 2, 2, 2, 4, 4, 2, 2, 2,\n",
+            "       4, 2, 2, 2, 2, 2, 2, 2, 2, 4, 2, 2, 2, 4, 2, 4, 4, 4, 2, 2, 2, 2,\n",
+            "       2, 2, 2, 4, 4, 4, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 4, 2, 2, 4, 4,\n",
+            "       2, 2, 2, 4, 4, 4, 2, 4, 2, 4, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2,\n",
+            "       4, 2, 2, 2, 2, 2, 2, 2, 4, 4, 2, 2, 2, 4, 2, 2, 4, 4, 2, 2, 2, 2,\n",
+            "       2, 2, 4, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 4, 2, 2, 4,\n",
+            "       2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 4, 2, 2, 4, 4, 4, 4,\n",
+            "       2, 2, 4, 2, 2, 2, 2, 2, 2, 4, 4, 2, 2, 2, 4, 2, 4, 2, 4, 4, 4, 2,\n",
+            "       4, 2, 2, 2, 2, 2, 2, 2, 2, 4, 4, 4, 2, 2, 4, 2, 4, 4, 4, 2, 2, 2,\n",
+            "       2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 4, 2, 2, 2, 2, 2, 2, 4, 2, 2, 4, 2,\n",
+            "       2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 4, 2, 2, 2, 2, 2, 2, 2, 2, 2, 4, 2,\n",
+            "       2, 2, 2, 2, 2, 2, 2, 2, 4, 4, 4, 2, 2, 2, 2, 2, 2, 2, 2, 2, 4, 4,\n",
+            "       2, 2, 2, 2, 2, 2, 2, 2, 2, 4, 2, 2, 2, 2, 4, 4, 4], dtype=int64)\n"
           ]
         }
       ],
       "source": [
         "y = dataset.iloc[:, -1].values;\n",
-        "print(y);"
+        "pprint(y);"
       ]
     },
     {
@@ -198,7 +259,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 44,
       "metadata": {},
       "outputs": [
         {
@@ -208,10 +269,10 @@
             "DataSet Splitting:\n",
             "\n",
             "_______________________________\n",
-            "X_train:  4472\n",
-            "X_test:  1120\n",
-            "y_train: 559\n",
-            "y_test 140\n"
+            "X_train:  4368\n",
+            "X_test:  1096\n",
+            "y_train: 546\n",
+            "y_test 137\n"
           ]
         }
       ],
@@ -239,6 +300,17 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 34,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from sklearn.linear_model import LogisticRegression;\n",
+        "classifier = LogisticRegression(random_state=0);\n",
+        "classifier.fit(X_train, y_train);"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "colab_type": "text",
@@ -246,6 +318,30 @@
       },
       "source": [
         "## Predicting the Test set results"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 42,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "array([2, 2, 4, 4, 2, 2, 2, 4, 2, 2, 4, 2, 4, 2, 2, 4, 4, 4, 4, 2, 2, 2,\n",
+            "       4, 2, 4, 4, 2, 2, 2, 4, 2, 4, 4, 2, 2, 2, 4, 4, 2, 4, 2, 2, 2, 2,\n",
+            "       2, 2, 2, 4, 2, 2, 4, 2, 4, 2, 2, 2, 4, 4, 2, 4, 2, 2, 2, 2, 2, 2,\n",
+            "       2, 2, 4, 4, 2, 2, 2, 2, 2, 2, 4, 2, 2, 2, 4, 2, 4, 2, 2, 4, 2, 4,\n",
+            "       4, 2, 4, 2, 4, 4, 2, 4, 4, 4, 4, 2, 2, 2, 4, 4, 2, 2, 4, 2, 2, 2,\n",
+            "       4, 2, 2, 4, 2, 2, 2, 2, 2, 2, 2, 4, 2, 2, 4, 4, 2, 4, 2, 4, 2, 2,\n",
+            "       4, 2, 2, 4, 2], dtype=int64)\n"
+          ]
+        }
+      ],
+      "source": [
+        "y_pred = classifier.predict(X_test);\n",
+        "pprint(y_pred)"
       ]
     },
     {
@@ -259,6 +355,27 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 41,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "array([[83,  4],\n",
+            "       [ 3, 47]], dtype=int64)\n"
+          ]
+        }
+      ],
+      "source": [
+        "from sklearn.metrics import confusion_matrix;\n",
+        "\n",
+        "cm = confusion_matrix(y_test, y_pred);\n",
+        "pprint(cm)"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "colab_type": "text",
@@ -266,6 +383,28 @@
       },
       "source": [
         "## Computing the accuracy with k-Fold Cross Validation"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 56,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Accuracies:   96.6969696969697  %\n",
+            "Standard Deviation:   2.4347159649944254  %\n"
+          ]
+        }
+      ],
+      "source": [
+        "from sklearn.model_selection import cross_val_score;\n",
+        "\n",
+        "accuracies = cross_val_score(estimator=classifier, X=X_train, y=y_train, cv=10);\n",
+        "print(\"Accuracies:  \", format(accuracies.mean() * 100), \" %\")\n",
+        "print(\"Standard Deviation:  \", format(accuracies.std() * 100), \" %\")"
       ]
     }
   ],
