code_arrangement_update

--- a/Codes/decision_tree.ipynb
+++ b/Codes/decision_tree.ipynb
@@ -1304,6 +1304,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Computing the accuracy with k-Fold Cross Validation"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 17,
       "metadata": {},
