--- a/Codes/knn_neighbours.ipynb
+++ b/Codes/knn_neighbours.ipynb
@@ -298,41 +298,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 125,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [
         {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Feature Scaling Applied Successfully!\n",
-            "_____________________________________\n",
-            "X_train shape: (546, 8)\n",
-            "X_test shape: (137, 8)\n",
-            "\n",
-            "Training set - First 5 samples after scaling:\n",
-            "array([[-0.69781134, -0.74152574, -0.63363747, -0.54871998,  1.81553572,\n",
-            "         0.61907387,  0.34532102, -0.33863738],\n",
-            "       [-0.69781134, -0.74152574, -0.63363747, -0.99789705, -0.68279599,\n",
-            "        -0.18860673, -0.62157783, -0.33863738],\n",
-            "       [-0.69781134, -0.74152574, -0.63363747, -0.54871998, -0.68279599,\n",
-            "        -0.18860673, -0.62157783, -0.33863738],\n",
-            "       [-0.69781134, -0.40497291, -0.63363747, -0.54871998, -0.68279599,\n",
-            "        -0.59244703, -0.62157783, -0.33863738],\n",
-            "       [-0.37244414, -0.06842008, -0.63363747,  1.24798832, -0.12761116,\n",
-            "         1.42675446, -0.62157783, -0.33863738]])\n",
-            "\n",
-            "Test set - First 5 samples after scaling:\n",
-            "array([[-0.69781134, -0.74152574, -0.63363747, -0.54871998,  0.42757366,\n",
-            "        -0.99628733, -0.62157783, -0.33863738],\n",
-            "       [-0.69781134, -0.74152574, -0.63363747, -0.54871998, -0.68279599,\n",
-            "        -0.59244703, -0.62157783, -0.33863738],\n",
-            "       [ 0.60365746,  0.60468558, -0.27916405,  0.79881124,  1.81553572,\n",
-            "         0.21523357,  0.0230214 , -0.33863738],\n",
-            "       [ 1.25439187,  1.61434407,  0.07530937,  0.34963417,  1.81553572,\n",
-            "         2.23443506, -0.62157783, -0.33863738],\n",
-            "       [-0.69781134, -0.74152574, -0.63363747, -0.54871998, -0.68279599,\n",
-            "        -0.99628733, -0.62157783, -0.33863738]])\n"
+          "ename": "NameError",
+          "evalue": "name 'X_train' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[1], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpreprocessing\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m StandardScaler\n\u001b[0;32m      3\u001b[0m sc \u001b[38;5;241m=\u001b[39m StandardScaler()\n\u001b[1;32m----> 4\u001b[0m X_train \u001b[38;5;241m=\u001b[39m sc\u001b[38;5;241m.\u001b[39mfit_transform(\u001b[43mX_train\u001b[49m)\n\u001b[0;32m      5\u001b[0m X_test \u001b[38;5;241m=\u001b[39m sc\u001b[38;5;241m.\u001b[39mtransform(X_test)\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFeature Scaling Applied Successfully!\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+            "\u001b[1;31mNameError\u001b[0m: name 'X_train' is not defined"
           ]
         }
       ],
