--- a/Codes/ml_models_comparison.ipynb
+++ b/Codes/ml_models_comparison.ipynb
@@ -2,6 +2,53 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "a72ce7c6",
+   "metadata": {},
+   "source": [
+    "### 📊 Dataset Structure Explanation\n",
+    "\n",
+    "**🎯 Dependent Variable (Target Variable):**\n",
+    "- **`Class`**: Phân loại ung thư vú\n",
+    "  - **2**: Benign (Lành tính) - Không có ung thư\n",
+    "  - **4**: Malignant (Ác tính) - Có ung thư\n",
+    "\n",
+    "**🔬 Independent Variables (Features):** 9 đặc trưng y tế từ mẫu tế bào\n",
+    "\n",
+    "1. **`clump_thickness`**: Độ dày cụm tế bào (1-10)\n",
+    "   - Giá trị cao → Nghi ngờ ác tính\n",
+    "   \n",
+    "2. **`uniform_cell_size`**: Tính đồng đều kích thước tế bào (1-10)\n",
+    "   - Tế bào ác tính thường có kích thước không đồng đều\n",
+    "   \n",
+    "3. **`uniform_cell_shape`**: Tính đồng đều hình dạng tế bào (1-10)\n",
+    "   - Tế bào ác tính thường có hình dạng bất thường\n",
+    "   \n",
+    "4. **`marginal_adhesion`**: Độ bám dính biên tế bào (1-10)\n",
+    "   - Tế bào ác tính có xu hướng mất khả năng bám dính\n",
+    "   \n",
+    "5. **`single_epithelial_cell_size`**: Kích thước tế bào biểu mô đơn (1-10)\n",
+    "   - Liên quan đến sự phát triển bất thường của tế bào\n",
+    "   \n",
+    "6. **`bare_nuclei`**: Nhân trần (không có tế bào chất bao quanh) (1-10)\n",
+    "   - Đặc trưng thường thấy ở ung thư ác tính\n",
+    "   \n",
+    "7. **`bland_chromatin`**: Cấu trúc nhiễm sắc thể (1-10)\n",
+    "   - Tế bào ác tính có cấu trúc nhiễm sắc thể bất thường\n",
+    "   \n",
+    "8. **`normal_nucleoli`**: Nhân con bình thường (1-10)\n",
+    "   - Tế bào ác tính có nhân con to và nổi bật\n",
+    "   \n",
+    "9. **`mitoses`**: Quá trình phân bào (1-10)\n",
+    "   - Tế bào ác tính có tỷ lệ phân bào cao\n",
+    "\n",
+    "**📈 Tầm Quan Trọng trong Machine Learning:**\n",
+    "- **Features (X)**: 9 đặc trưng y tế → Dữ liệu đầu vào để dự đoán\n",
+    "- **Target (y)**: Phân loại ung thư → Kết quả cần dự đoán\n",
+    "- **Mục tiêu**: Học từ features để dự đoán chính xác target"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "82e461c7",
    "metadata": {},
    "source": [
@@ -276,6 +323,90 @@
     "print(f\"Dataset shape: {dataset.shape}\")\n",
     "print(f\"Number of features: {len(feature_names)}\")\n",
     "print(f\"Number of samples: {dataset.shape[0]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "c25121c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🔍 DATASET INFORMATION:\n",
+      "==================================================\n",
+      "\n",
+      "📊 Dataset Shape: (699, 10)\n",
+      "   - Rows (Samples): 699\n",
+      "   - Columns (Features + Target): 10\n",
+      "\n",
+      "🎯 TARGET VARIABLE (Dependent Variable):\n",
+      "   - Column: 'Class'\n",
+      "   - Values: [2, 4]\n",
+      "   - Value Counts:\n",
+      "     • 2 (Benign (Lành tính)): 458 samples (65.5%)\n",
+      "     • 4 (Malignant (Ác tính)): 241 samples (34.5%)\n",
+      "\n",
+      "🔬 FEATURES (Independent Variables):\n",
+      "   - Number of features: 8\n",
+      "      1. Uniformity_of_cell_size\n",
+      "      2. Uniformity_of_cell_shape\n",
+      "      3. Marginal_adhesion\n",
+      "      4. Single_epithelial_cell_size\n",
+      "      5. Bare_nuclei\n",
+      "      6. Bland_chromatin\n",
+      "      7. Normal_nucleoli\n",
+      "      8. Mitoses\n",
+      "\n",
+      "📈 FEATURE STATISTICS:\n",
+      "   - All features are numeric (scaled 1-10)\n",
+      "   - No missing values after preprocessing\n",
+      "   - Feature data types: [dtype('int64') dtype('float64')]\n",
+      "\n",
+      "🔍 SAMPLE DATA (First 3 rows):\n",
+      "   Uniformity_of_cell_size  Uniformity_of_cell_shape  Marginal_adhesion  Single_epithelial_cell_size  Bare_nuclei  Bland_chromatin  Normal_nucleoli  Mitoses  Class\n",
+      "0                        1                         1                  1                            2          1.0                3                1        1      2\n",
+      "1                        4                         4                  5                            7         10.0                3                2        1      2\n",
+      "2                        1                         1                  1                            2          2.0                3                1        1      2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Hiển thị thông tin chi tiết về features và target\n",
+    "print(\"🔍 DATASET INFORMATION:\")\n",
+    "print(\"=\" * 50)\n",
+    "\n",
+    "print(f\"\\n📊 Dataset Shape: {dataset.shape}\")\n",
+    "print(f\"   - Rows (Samples): {dataset.shape[0]}\")\n",
+    "print(f\"   - Columns (Features + Target): {dataset.shape[1]}\")\n",
+    "\n",
+    "print(f\"\\n🎯 TARGET VARIABLE (Dependent Variable):\")\n",
+    "print(f\"   - Column: 'Class'\")\n",
+    "print(f\"   - Values: {sorted(dataset['Class'].unique())}\")\n",
+    "print(f\"   - Value Counts:\")\n",
+    "for value in sorted(dataset['Class'].unique()):\n",
+    "    count = dataset['Class'].value_counts()[value]\n",
+    "    percentage = (count / len(dataset)) * 100\n",
+    "    label = \"Benign (Lành tính)\" if value == 2 else \"Malignant (Ác tính)\"\n",
+    "    print(f\"     • {value} ({label}): {count} samples ({percentage:.1f}%)\")\n",
+    "\n",
+    "print(f\"\\n🔬 FEATURES (Independent Variables):\")\n",
+    "print(f\"   - Number of features: {len(feature_names)}\")\n",
+    "print(f\"   - Feature names:\")\n",
+    "for i, feature in enumerate(feature_names, 1):\n",
+    "    print(f\"     {i:2d}. {feature}\")\n",
+    "\n",
+    "print(f\"\\n📈 FEATURE STATISTICS:\")\n",
+    "print(\"   - All features are numeric (scaled 1-10)\")\n",
+    "print(\"   - No missing values after preprocessing\")\n",
+    "print(f\"   - Feature data types: {dataset[feature_names].dtypes.unique()}\")\n",
+    "\n",
+    "# Hiển thị sample data\n",
+    "print(f\"\\n🔍 SAMPLE DATA (First 3 rows):\")\n",
+    "sample_data = dataset[feature_names + ['Class']].head(3)\n",
+    "print(sample_data.to_string())"
    ]
   },
   {
