--- a/Codes/logistic_regression.ipynb
+++ b/Codes/logistic_regression.ipynb
@@ -312,20 +312,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [
         {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "DataSet Splitting:\n",
-            "\n",
-            "_______________________________\n",
-            "X_train:  4914\n",
-            "X_test:  1233\n",
-            "y_train: 546\n",
-            "y_test 137\n"
+          "ename": "NameError",
+          "evalue": "name 'X' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[1], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodel_selection\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m train_test_split;\n\u001b[1;32m----> 3\u001b[0m X_train, X_test, y_train, y_test \u001b[38;5;241m=\u001b[39m train_test_split(\u001b[43mX\u001b[49m, y, test_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.2\u001b[39m, random_state\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m);\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDataSet Splitting:\u001b[39m\u001b[38;5;124m\"\u001b[39m);\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_______________________________\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+            "\u001b[1;31mNameError\u001b[0m: name 'X' is not defined"
           ]
         }
       ],
@@ -334,7 +332,7 @@
         "\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=0);\n",
         "\n",
-        "print(\"DataSet Splitting:\\n\");\n",
+        "print(\"DataSet Splitting:\");\n",
         "print(\"_______________________________\")\n",
         "print(\"X_train: \", np.size(X_train));\n",
         "print(\"X_test: \", np.size(X_test));\n",
@@ -560,7 +558,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -586,11 +584,11 @@
         "# Visualize Test set results using the same 2 features\n",
         "X_set, y_set = X_test[:, [0, 1]], y_test\n",
         "X1, X2 = np.meshgrid(np.arange(start = X_set[:, 0].min() - 1, stop = X_set[:, 0].max() + 1, step = 0.01),\n",
-        "                     np.arange(start = X_set[:, 1].min() - 1, stop = X_set[:, 1].max() + 1, step = 0.01))\n",
+        "                        np.arange(start = X_set[:, 1].min() - 1, stop = X_set[:, 1].max() + 1, step = 0.01))\n",
         "\n",
         "plt.figure(figsize=(10, 8))\n",
         "plt.contourf(X1, X2, classifier_2d.predict(np.array([X1.ravel(), X2.ravel()]).T).reshape(X1.shape),\n",
-        "             alpha = 0.75, cmap = ListedColormap(['#FA8072', '#1E90FF']))\n",
+        "                alpha = 0.75, cmap = ListedColormap(['#FA8072', '#1E90FF']))\n",
         "plt.xlim(X1.min(), X1.max())\n",
         "plt.ylim(X2.min(), X2.max())\n",
         "for i, j in enumerate(np.unique(y_set)):\n",
